--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -100,3 +100,18 @@ main {
 .input-group {
   display: flex;
 }
+
+.can-move {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  background-color: aquamarine;
+  opacity: 0.7;
+}
+
+.can-move:hover {
+  cursor: pointer;
+}
