--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -6,7 +6,7 @@
   --black1: #010516;
   --board-cell-dark: #716040;
   --background: #F9F4EF;
-  --selected-piece: #004643;
+  --green: #004643;
 }
 
 html {
@@ -23,6 +23,12 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: 'Fira Mono', 'Consolas', monospace;
+}
+
+main h1 {
+  font-size: 36px;
+  font-weight: bold;
 }
 
 #board-table,
@@ -103,7 +109,7 @@ main {
 }
 
 .piece-can-move {
-  outline: 4px solid var(--selected-piece);
+  outline: 4px solid var(--green);
   outline-offset: -2px;
 }
 
@@ -114,10 +120,39 @@ main {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: var(--selected-piece);
+  background-color: var(--green);
   opacity: .5;
 }
 
 .piece-can-move>span:hover {
   cursor: pointer;
+}
+
+.btn-group {
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+}
+
+.btn-primary {
+  width: 100%;
+  text-align: center;
+  background-color: var(--green);
+  color: var(--white0);
+  text-decoration: none;
+  padding: 12px 24px;
+  transition: all .3s ease;
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+  opacity: .8;
+}
+
+.btn-primary:active {
+  opacity: .7;
+}
+
+.btn-primary:not(:last-child) {
+  margin-bottom: 12px;
 }
