--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -6,6 +6,7 @@
   --black1: #010516;
   --board-cell-dark: #716040;
   --background: #F9F4EF;
+  --loader-bg: 209, 209, 233;
   --green: #004643;
 }
 
@@ -19,6 +20,7 @@ html {
 }
 
 main {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -162,4 +164,35 @@ main h1 {
 
 .dev {
   width: 100%;
+}
+
+.loader-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(var(--loader-bg), 0.8);
+}
+
+.loader {
+  border: 8px solid var(--white0);
+  border-radius: 50%;
+  border-top: 8px solid var(--green);
+  width: 64px;
+  height: 64px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
