--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -176,6 +176,7 @@ main h1 {
   justify-content: center;
   align-items: center;
   background-color: rgba(var(--loader-bg), 0.8);
+  z-index: 99999;
 }
 
 .loader {
