--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -25,7 +25,17 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: 'Fira Mono', 'Consolas', monospace;
+  font-family: cursive;
+}
+
+textarea, input {
+  font-size: 12px;
+  font-family: cursive;
+  font-weight: bold;
+  border: 4px solid var(--black0);
+  background-color: var(--background);
+  padding: 8px;
+  margin: 0;
 }
 
 main h1 {
@@ -110,6 +120,33 @@ main h1 {
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+.input-group input {
+  width: 100%;
+  padding: 4px 12px;
+}
+
+.input-group button {
+  background-color: var(--board-cell-dark);
+  color: var(--white0);
+  font-family: cursive;
+  font-weight: bold;
+  border: none;
+  outline: 4px solid var(--black0);
+  outline-offset: -4px;
+  margin: 0;
+  padding: 4px 24px;
+  transition: all .2s ease;
+  cursor: pointer;
+}
+
+.input-group button:hover {
+  opacity: 0.8;
+}
+
+.input-group button:active {
+  opacity: 0.7;
 }
 
 .piece-can-move {
