scaffolding for more draw detection
(there are some special endings in which five rounds with no winner causes a draw)
although the actual logic (#inSpecialEnding() function) to detect is still missing

also:

rename 'man' to 'pawn'

storing state piece count to avoid recomputation (calling bo.countPieces on the same board in multiple places)
(also refac heuristicCountPieces to use it)
this also helps with the draw detection logic, as it uses the counts for each kind of piece

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -25,7 +25,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: cursive;
+  font-family: 'Fira Mono', Consolas, Monaco, 'SF Mono', 'Liberation Mono', 'Ubuntu Mono', monospace;
 }
 
 textarea, input {
@@ -95,7 +95,7 @@ main h1 {
   left: 50%;
 }
 
-.piece.man {
+.piece.pawn {
   transform: translateY(-50%) translateX(-50%);
   width: calc(3 / 4 * var(--cell-size-px));
   height: calc(3 / 4 * var(--cell-size-px));
