--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -29,14 +29,48 @@ main, main form {
   font-family: var(--default-font);
 }
 
-textarea, input {
+textarea,
+input {
   font-size: 12px;
   font-family: cursive;
   font-weight: bold;
-  border: 4px solid var(--black0);
-  background-color: var(--background);
-  padding: 8px;
+  border: 4px solid var(--green);
+  background-color: var(--white0);
+  padding: 4px 8px;
   margin: 0;
+}
+
+select {
+  appearance: none;
+  border: 0;
+  outline: 0;
+  font: inherit;
+  width: 100%;
+  height: 3em;
+  padding: 0 4em 0 1em;
+  background: url(https://upload.wikimedia.org/wikipedia/commons/9/9d/Caret_down_font_awesome_whitevariation.svg) no-repeat right 0.8em center / 1.4em, linear-gradient(to left, var(--green) 3em, var(--white1) 3em);
+  color: var(--black0);
+  border-radius: 0;
+  box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: all .2s ease;
+}
+
+select option {
+  color: inherit;
+  background-color: var(--background);
+}
+
+select:focus {
+  outline: none;
+}
+
+select::-ms-expand {
+  display: none;
+}
+
+select:hover {
+  box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.1);
 }
 
 main h1 {
@@ -120,12 +154,11 @@ main h1 {
 .input-group {
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
 }
 
-.input-group input {
-  width: 100%;
-  padding: 4px 12px;
+.input-group label {
+  margin-bottom: 8px;
 }
 
 .input-group button {
@@ -190,12 +223,14 @@ main h1 {
   transition: all .3s ease;
   font-family: var(--default-font);
   font-weight: bold;
+  box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
 }
 
 .btn-primary:hover,
 .btn-primary:focus {
   opacity: .8;
   cursor: pointer;
+  box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.1);
 }
 
 .btn-primary:active {
