--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -9,6 +9,9 @@
   --loader-bg: 209, 209, 233;
   --green: #004643;
   --default-font: 'Lora', serif;
+
+  --dark-red: #990000;
+  --beige: #ffeedd;
 }
 
 html {
@@ -78,7 +81,12 @@ main h1 {
   font-weight: bold;
 }
 
-#board-table,
+/* outline, not border, otherwise pieces will be off center */
+.board-table {
+  outline: 4px solid var(--black0);
+}
+
+.board-table,
 .board-cell,
 .board-row {
   padding: 0;
@@ -87,60 +95,35 @@ main h1 {
 }
 
 .board-cell {
-  width: var(--cell-size-px);
-  height: var(--cell-size-px);
-  max-width: var(--cell-size-px);
-  max-height: var(--cell-size-px);
-  border: 4px solid var(--black1);
   box-sizing: border-box;
   position: relative;
 }
 
-.cell-text {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: translateY(-50%);
-  color: white;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-  opacity: 0;
-  text-transform: uppercase;
-  font-family: monospace;
-  font-size: 13px;
+.board-cell.cell-dark {
+  background-color: var(--dark-red);
 }
 
-.cell-text:hover {
-  cursor: default;
-  opacity: 1;
-}
-
-.board-cell.black {
-  background-color: var(--board-cell-dark);
-}
-
-.board-cell.white {
-  background-color: var(--white0);
+.board-cell.cell-light {
+  background-color: var(--beige);
 }
 
 .piece {
   position: absolute;
-  top: 50%;
-  left: 50%;
 }
 
 .piece.pawn {
-  transform: translateY(-50%) translateX(-50%);
-  width: calc(3 / 4 * var(--cell-size-px));
-  height: calc(3 / 4 * var(--cell-size-px));
   border-radius: 100%;
+  width: calc(3/4 * 1/8 * 100%);
+  height: calc(3/4 * 1/8 * 100%);
+  transform: translateY(calc(1/6 * 100%)) translateX(calc(1/6 * 100%));
+  
 }
 
 .piece.king {
-  transform: translateY(-50%) translateX(-50%) rotate(45deg);
-  width: calc(1 / 2 * var(--cell-size-px));
-  height: calc(1 / 2 * var(--cell-size-px));
+  transform: translateY(calc(3/10 * 100%)) translateX(calc(3/10 * 100%));
+  width: calc(5/8 * 1/8 * 100%);
+  height: calc(5/8 * 1/8 * 100%);
+  
 }
 
 .piece.white {
@@ -149,6 +132,16 @@ main h1 {
 
 .piece.black {
   background-color: var(--black0);
+}
+
+.board-mark {
+  position: absolute;
+  opacity: 0.5;
+  background-color: yellow; /* TODO find better color */
+}
+
+.board-mark:hover {
+  cursor: pointer;
 }
 
 .input-group {
@@ -181,27 +174,6 @@ main h1 {
 
 .input-group button:active {
   opacity: 0.7;
-}
-
-.piece-can-move {
-  outline: 4px solid var(--green);
-  outline-offset: -2px;
-  z-index: 1;
-}
-
-.piece-can-move::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--green);
-  opacity: .5;
-}
-
-.piece-can-move:hover {
-  cursor: pointer;
 }
 
 .btn-group {
