--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -115,8 +115,16 @@ main h1 {
   border-radius: 100%;
   width: calc(3/4 * 1/8 * 100%);
   height: calc(3/4 * 1/8 * 100%);
+  /* 100% is the height/width of the piece, so
+     4/3 * 100% gets the height/width of the cell
+     (4/3 * 100% - 100%) gets the difference
+     (4/3 * 100% - 100%) / 2  <- this is exactly how much the piece has to move down/left to be center
+     ((4/3 - 1) * 100%) / 2   simplify
+     (1/3 * 100%) / 2         simplify
+     1/6 * 100%               simplify, this is the current value
+     same thing for .piece.king
+  */
   transform: translateY(calc(1/6 * 100%)) translateX(calc(1/6 * 100%));
-  
 }
 
 .piece.king {
