--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -146,7 +146,11 @@ main h1 {
 .board-mark {
   position: absolute;
   opacity: 0.5;
-  background-color: yellow; /* TODO find better color */
+  background-color: yellow;
+}
+
+.board-mark.blue {
+  background-color: blue;
 }
 
 .board-mark:hover {
